<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app_screens.secondary_screens.AttemptScoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        android:background="@color/grey_transparent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/quizNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="Nombre"
                android:paddingHorizontal="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attemptLabel"
                android:paddingHorizontal="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/attemptNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="1"
                android:paddingHorizontal="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attemptDateLabel"
                android:textSize="20sp"
                android:textStyle="normal"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/attemptDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="30/12/2023"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:padding="40dp"
        android:background="@color/light_grey_transparent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attemptDateLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="30/12/2023 23:30"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durationLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="00:30"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionsLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/totalQuestionsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="10"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correctAnswersLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/correctAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrectAnswersLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/incorrectAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gradeLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrectQuestionsLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/incorrectQuestionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideOverlay"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/noIncorrectQuestionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/noresultIncorrectQuestions_text"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>